--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# misc
+*/node_modules
+**/node_modules
+*/*/node_modules
+node_modules/*
+/.DS_Store
+.DS_Store
