--- a/api-user/package.json
+++ b/api-user/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "knex": "^0.95.13"
   }
 }
