--- a/api-user/package.json
+++ b/api-user/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node .",
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only index.ts"
+    "prod": "tsc && node ./www/server.js",
+    "clean": "rm -rf www/ || true",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd .."
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
