feature(api-user)
- add endpoint to add a new user
- add endpoint to login user
- add endpoint to fetch a single user details
- add middleware to validate input

--- a/api-user/tsconfig.json
+++ b/api-user/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "allowJs": true,
     "strict": true,
     "esModuleInterop": true,
     "strictNullChecks": false,
@@ -18,7 +19,9 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "index.ts",
+    "knexfile.ts"
   ],
   "exclude": [
     "node_modules/**/*"
