--- a/api-user/package.json
+++ b/api-user/package.json
@@ -12,23 +12,29 @@
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd .."
   },
+  "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.6",
     "dotenv": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
-    "knex": "^0.95.13"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.13",
+    "pg": "^8.7.1"
   }
 }
