--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,15 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t park-api-user ./api-user
-  # - docker build -t udagram-api-user ./udagram-api-user
-  # - docker build -t udagram-api-feed ./udagram-api-feed
-  # - docker build -t udagram-frontend ./udagram-frontend
-  # - docker tag reverseproxy officialphemi/reverseproxy
-  # - docker tag udagram-api-user officialphemi/udagram-api-user
-  # - docker tag udagram-api-feed officialphemi/udagram-api-feed
+  - docker build -t park-api-car ./api-car
+  - docker build -t reverse-proxy ./reverse-proxy
+  - docker tag reverse-proxy officialphemi/reverse-proxy
   - docker tag park-api-user officialphemi/park-api-user
+  - docker tag park-api-car officialphemi/park-api-car
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push officialphemi/park-api-user
-  # - docker push officialphemi/udagram-api-user:v3
-  # - docker push officialphemi/udagram-api-feed:v3
-  # - docker push officialphemi/udagram-frontend:v3
+  - docker push officialphemi/park-api-car
+  - docker push officialphemi/reverse-proxy
