--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,37 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+jobs:
+  test:
+    docker:
+      - image: circleci/docker@1.5.0
+    steps:
+      - checkout
+      - run: echo "no tests"
+  build: 
+    docker:
+      - image: circleci/docker@1.5.0
+    steps:
+      - checkout
+      - run: docker --version # print the version for logging
+      - run: docker build -t park-api-user ./api-user
+      - run: docker build -t park-api-car ./api-car
+      - run: docker build -t reverse-proxy ./reverse-proxy
+      - run: docker tag reverse-proxy officialphemi/reverse-proxy
+      - run: docker tag park-api-user officialphemi/park-api-user
+      - run: docker tag park-api-car officialphemi/park-api-car
+  deploy:
+    docker:
+      - image: circleci/docker@1.5.0
+    steps:
+      - checkout
+      - run: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+      - run: docker push officialphemi/park-api-user
+      - run: docker push officialphemi/park-api-car
+      - run: docker push officialphemi/reverse-proxy
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build_and_deploy:
     jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+      - build
+      - deploy
+      
