--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,11 @@ services:
           - 8080:8080
       restart: always
       depends_on:
+        - backend-car
         - backend-user
-  backend-user:
-    image: api-user
+        - backend-parking
+  backend-car:
+    image: park-api-car
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
@@ -19,21 +21,27 @@ services:
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
-  # backend-feed:
-  #   image: udagram-api-feed
-  #   volumes:
-  #     - $HOME/.aws:/root/.aws
-  #   environment:
-  #     POSTGRES_USERNAME: $POSTGRES_USERNAME
-  #     POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
-  #     POSTGRES_DB: $POSTGRES_DB
-  #     POSTGRES_HOST: $POSTGRES_HOST
-  #     AWS_REGION: $AWS_REGION
-  #     AWS_PROFILE: $AWS_PROFILE 
-  #     AWS_BUCKET: $AWS_BUCKET
-  #     JWT_SECRET: $JWT_SECRET
-  #     URL: "http://localhost:8100"
-  # frontend:
-  #   image: udagram-frontend:local
-  #   ports:
-  #     - "8100:80"
+  backend-user:
+    image: park-api-user
+    environment:
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION 
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
+  backend-parking:
+    image: park-api-parkings
+    environment:
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION 
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
