--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -3,11 +3,14 @@ events { worker_connections 1024; }
 error_log /dev/stdout debug;
 http {
  sendfile on;
+ upstream car {
+     server backend-car:8080;
+ }
  upstream user {
      server backend-user:8080;
  }
- upstream feed {
-     server backend-feed:8080;
+ upstream parking {
+     server backend-parking:8080;
  }
  proxy_set_header   Host $host;
  proxy_set_header   X-Real-IP $remote_addr;
@@ -16,11 +19,14 @@ http {
  proxy_set_header   X-Forwarded-Host $server_name;    
  server {
      listen 8080;
-     location /api/v0/feed {
-         proxy_pass         http://feed;
+     location /api/v1/cars {
+         proxy_pass         http://car;
      }
-     location /api/v0/users {
+     location /api/v1/users {
          proxy_pass         http://user;
+     }
+     location /api/v1/parkings {
+         proxy_pass         http://parking;
      }            
  }
 }
