--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,15 @@ jobs:
             docker build -t park-api-car ./api-car
             docker build -t park-api-parkings ./api-parkings
             docker build -t reverse-proxy ./reverse-proxy
-            docker tag reverse-proxy officialphemi/reverse-proxy:"$CIRCLE_BUILD_NUM"
-            docker tag park-api-user officialphemi/park-api-user:"$CIRCLE_BUILD_NUM"
-            docker tag park-api-car officialphemi/park-api-car:"$CIRCLE_BUILD_NUM"
-            docker tag park-api-car officialphemi/park-api-parkings:"$CIRCLE_BUILD_NUM"
+            docker tag reverse-proxy officialphemi/reverse-proxy:v"$CIRCLE_BUILD_NUM"
+            docker tag park-api-user officialphemi/park-api-user:v"$CIRCLE_BUILD_NUM"
+            docker tag park-api-car officialphemi/park-api-car:v"$CIRCLE_BUILD_NUM"
+            docker tag park-api-car officialphemi/park-api-parkings:v"$CIRCLE_BUILD_NUM"
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push officialphemi/park-api-user:"$CIRCLE_BUILD_NUM"
-            docker push officialphemi/park-api-car:"$CIRCLE_BUILD_NUM"
-            docker push officialphemi/park-api-parkings:"$CIRCLE_BUILD_NUM"
-            docker push officialphemi/reverse-proxy:"$CIRCLE_BUILD_NUM"
+            docker push officialphemi/park-api-user:v"$CIRCLE_BUILD_NUM"
+            docker push officialphemi/park-api-car:v"$CIRCLE_BUILD_NUM"
+            docker push officialphemi/park-api-parkings:v"$CIRCLE_BUILD_NUM"
+            docker push officialphemi/reverse-proxy:v"$CIRCLE_BUILD_NUM"
 workflows:
   scripts:
     jobs:
