--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverse_proxy:
     build:
       context: ./reverse-proxy
-    image: reverseproxy
+    image: reverse-proxy
   backend_user:
     build:
       context: ./api-user
-    image: api-user
-  # backend_feed:
-  #   build:
-  #     context: ./udagram-api-feed
-  #   image: udagram-api-feed
-  # frontend:
-  #   build:
-  #     context: ./udagram-frontend
-  #   image: udagram-frontend:local
+    image: park-api-user
+  backend_car:
+    build:
+      context: ./api-car
+    image: park-api-car
+  backend_parking:
+    build:
+      context: ./api-parkings
+    image: park-api-parkings
