--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: cGhlbWk=
-  POSTGRES_PASSWORD: YXRhd2V3ZS5iYXM=
+  POSTGRES_USERNAME: cG9zdGdyZXMK
+  POSTGRES_PASSWORD: cG9zdGdyZXMK
