--- a/api-car/tsconfig.json
+++ b/api-car/tsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "allowJs": true,
-    "strict": true,
+    "target": "es2016",
+    "module": "CommonJS",
+    "outDir": "dist",
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "strictNullChecks": false,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "baseUrl": "/",
-    "paths": {
-      "*": [
-        "node_modules/*"
-      ]
-    },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true
   },
   "include": [
     "src/**/*",
@@ -24,6 +22,9 @@
     "knexfile.ts"
   ],
   "exclude": [
-    "node_modules/**/*"
+    "**/*.spec.ts",
+    "node_modules/",
+    "node_modules/**/*",
+    "dist"
   ]
 }
